--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@tanstack/react-query": "^5.56.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.109",
     "@types/react": "^18.3.9",
@@ -53,11 +50,19 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@tanstack/eslint-plugin-query": "^5.57.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
     "typescript-eslint": "^8.7.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
